<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="start_interval">Start from this Interval</string>
    <string name="move">Move</string>
    <string name="move_complete">Move Complete</string>
    <string name="move_undo">Move Undo</string>
    <string name="app_name">Talk Interval</string>
    <string name="add_interval">Add Interval</string>
    <string name="edit_interval">Edit Interval</string>
    <string name="delete_interval">Delete Interval</string>
    <string name="interval_name">Interval Name</string>
    <string name="timer">Timer</string>
    <string name="alerts">Alerts</string>
    <string name="mins">Mins</string>
    <string name="secs">Secs</string>
    <string name="color">Color</string>
    <string name="countdown">Countdown</string>
    <string name="halfway">Halfway</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_new_set">New Set</string>
    <string name="context_menu_edit_set">Edit Set Name</string>
    <string name="context_menu_delete_set">Delete Set</string>
    <string name="menu_new_interval">New Interval</string>
    <string name="OK">OK</string>
    <string name="duplicate_interval">Duplicate Interval</string>
    <string name="interval_set">Interval Set</string>
    <string name="interval_sets">Interval Sets</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="version">Version : </string>

</resources>