<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:layout_margin="20dp" >

    <LinearLayout
        style="@style/TopBar.Dark"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/TopBarText"
            android:text="@string/interval_set" />
    </LinearLayout>

    <View style="@style/Divider.Green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#fff" >

        <EditText
            android:hint="Interval Set Name"
            android:id="@+id/edtTxt_set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences" />

          
    </LinearLayout>

   <View style="@style/Divider.Green" />

    <LinearLayout
        style="@style/BottomBar.Dark"
        android:orientation="horizontal"
        android:gravity="center" >

        <Button
            android:id="@+id/BtnCancel"
            style="@style/MyButton.White"
            android:text="@string/cancel" />
        
        <View style="@style/ButtonDivider.White" />

        <Button
            android:id="@+id/btnSave"
            style="@style/MyButton.White"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>