<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="#99cc00"
    android:gravity="center"
    android:minWidth="300dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_interval_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/interval_name"
        android:textSize="24sp"
        android:layout_margin="10dp" />
    
    <View style="@style/Divider.white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/tv_min"
            style="@style/timerText.Large"
            android:text="00" />

        <TextView
            style="@style/timerText.Large"
            android:text=":" />

        <TextView
            android:id="@+id/tv_sec"
            style="@style/timerText.Large"
            android:text="00" />

        <TextView
            style="@style/timerText"
            android:text=":" />

        <TextView
            android:id="@+id/tv_milli"
            style="@style/timerText"
            android:text="00" />
    </LinearLayout>

    <View style="@style/Divider.white" />
    
    <ViewAnimator
        android:id="@+id/va_buttons_interval_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dp" >

        <LinearLayout
            style="@style/BottomBar.Dark">

            <Button
                android:id="@+id/btn_stop"
                style="@style/MyButton.White"
                android:text="@string/stop" />
        </LinearLayout>

        <LinearLayout
            style="@style/BottomBar.Dark"
            android:gravity="center">

            <Button
                android:id="@+id/btn_start"
                style="@style/MyButton.White"
                android:text="@string/start" />
            
            <View style="@style/ButtonDivider.White" />

            <Button
                android:id="@+id/btn_reset"
                style="@style/MyButton.White"
                android:text="@string/reset" />
        </LinearLayout>
    </ViewAnimator>

</LinearLayout>